--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -37,3 +37,8 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+
+    - name: Release
+        path: ${{env.SOLUTION_FILE_PATH}}/x64/Release
+        if-no-files-found: warn
+        retention-days: 60
